code clean up with syntactic sugar